killersh/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secret-pod
  name: secret-pod
  namespace: secret
spec:
  containers:
  - image: busybox:1.31.1
    imagePullPolicy: IfNotPresent
    name: secret-pod
    terminationMessagePath: /dev/termination-log
    volumeMounts:
    - name: secret1
      mountPath: "/tmp/secret1"
      readOnly: true
  nodeName: worker
  volumes:
  - name: secret1
    secret:
      secretName: secret1
